tests/machine/x/cobol/if_then_else_nested.cob
*> Generated by Mochi compiler v0.10.26 on 2025-07-16T15:32:15Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. IF-THEN-ELSE-NESTED.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 X PIC 9 VALUE 8.
       01 MSG PIC 9.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       IF X > 10
           COMPUTE TMP = "big"
       ELSE
           IF X > 5
               COMPUTE TMP = "medium"
           ELSE
               COMPUTE TMP = "small"
           END-IF
       END-IF
       COMPUTE MSG = TMP
       DISPLAY MSG
       STOP RUN.
